2003-05-19  John Levon  <levon@movementarian.org>

	* libpp/name_storage.h: s/name_map/stored_names/, it's not
	a map any more.

2003-05-19  Philippe Elie  <phil.el@wanadoo.fr>

	* libregex/mangled-name.txt:
	* libregex/stl.pat.in: partial handling of _Identity<> and
	  _Select1st<>, pattern fail if type are too complex

2003-05-19  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/format_output.cpp: small cleanup

	* libpp/name_storage.h:
	* libpp/name_storage.cpp: ensure type safety by providing distinct
	  type identifier for each name_storage based container

	* libpp/profile_container.cpp:
	* libpp/sample_container.cpp:
	* libpp/symbol_functors.cpp:
	* libpp/symbol_sort.cpp:
	* libpp/opp_symbol.h: use the name identifier api

	* libpp/op_header.cpp: 
	* libpp/partition_files.cpp: use a set<string> not a name_storage

	* libpp/format_output.cpp: small cleanup


2003-05-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/partition_files.cpp: merge partition entry when neccessary
	  fixing a corner case when a binary can be a dependent or a primary
	  image and was not merged

2003-05-18  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opreport_options.cpp:
	* pp/opannotate_options.cpp: remove conflicting options shortcut

2003-05-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libregex/stl.pat.in: add list<T>::{const_}+iterator

2003-05-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/name_storage.cpp: basename() return an empty string for nil id

2003-05-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: get_linenr() init linenr to zero

	* libpp/name_storage.cpp: don't use id zero
	* libpp/opp_symbol.h: now we use id and not string we must provide
	  default ctor to initialize the id
	* libpp/profile_container.cpp: init debug info entry only if
	  get_linenr() succeed

2003-05-17  Philippe Elie  <phil.el@wanadoo.fr>

	* libdb/db_manage.c: better handling of zero sample file size when
	  opening in read only mode

	* module/x86/op_nmi.c: printk format fix
