@@ -20,6 +20,7 @@ Before merging with trunk
   flushed data in cout buffer. It's also not clear if at exit() we have not
   a problem (who is the owner of the buffer and in what order of and cout will
   be destroyed ?)
+ o image-exclude: doesn't seem to work
 
  o fix John movement on 2.5: odb_insert failure (and message error corrupted ?)
    - haven't been able to reproduce yet, I just get too many files open instead ;)
